--- a/data/data_preprocessing.ipynb
+++ b/data/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,6 +750,418 @@
     "     list2.append(df_recovered.iloc[i].sum())\n",
     "df_recovered = pd.DataFrame({'Date':list1, 'Total':list2})\n",
     "df_recovered.to_csv('recovered.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def scraping_data():\n",
+    "    \"\"\"\n",
+    "    Scraping the data from Johns Hopkins CSSE\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # get the date of yesterday and the day before yesterday and convert them to the m-d-Y format\n",
+    "    yesterday = (date.today() + timedelta(days = -1)).strftime(\"%m-%d-%Y\")\n",
+    "    before_yesterday = (date.today() + timedelta(days = -2)).strftime(\"%m-%d-%Y\")\n",
+    "\n",
+    "    #the url of global daily reports provided by Johns Hopkins University\n",
+    "    address = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_daily_reports/\"\n",
+    "    url1 = address + yesterday + \".csv\"\n",
+    "    url2 = address + before_yesterday + \".csv\"\n",
+    "\n",
+    "    # load the csv data into pandas.DataFrame\n",
+    "    # and test whether yesterday data has been update yet\n",
+    "    try:\n",
+    "        p_td = pd.read_csv(url1)\n",
+    "    except:\n",
+    "        p_td = pd.read_csv(url2)\n",
+    "    # Only show the data about Australia\n",
+    "    # get the summary data for each state in Australia\n",
+    "    data_td = p_td[p_td['Country_Region'] == 'Australia']\n",
+    "    data_td = data_td.drop([\"FIPS\", \"Admin2\"], axis=1)\n",
+    "    data_td = data_td.reset_index(drop=True)\n",
+    "    data_td.drop(columns=['Combined_Key'], inplace=True)\n",
+    "    data_td['Population'] = [412576, 7544000, 211945, 5071000, 1677000, 515000, 6359000, 2589000]\n",
+    "    data_td = data_td.astype({'Last_Update': 'datetime64'})\n",
+    "    data_td['Death Rate'] = data_td['Deaths'] / data_td['Confirmed']\n",
+    "    data_td['Confirmed/100k'] = ((data_td['Confirmed'] / data_td['Population'])*100000).round()\n",
+    "    data_td.drop(columns = 'Population', inplace=True)\n",
+    "    data_td = data_td[['Province_State', 'Country_Region','Active', 'Confirmed', 'Recovered','Deaths','Death Rate', 'Confirmed/100k','Last_Update', 'Lat', 'Long_']]\n",
+    "\n",
+    "    # url of the time series data of global confirmed cases\n",
+    "    url_hc= \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv\"\n",
+    "    # url of the time series data of global death cases\n",
+    "    url_hd= \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv\"\n",
+    "    # url of the time series data of global recovered cases\n",
+    "    url_hr= \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_recovered_global.csv\"\n",
+    "    p_hc = pd.read_csv(url_hc)\n",
+    "    p_hd = pd.read_csv(url_hd)\n",
+    "    p_hr = pd.read_csv(url_hr)\n",
+    "\n",
+    "    # Time series data of Australia Confrimed cases\n",
+    "    data_hc = p_hc[p_hc['Country/Region'] == 'Australia']\n",
+    "    data_hc = data_hc.reset_index(drop=True)\n",
+    "    data_hc  = data_hc.drop(columns = ['Country/Region', 'Lat', 'Long'])\n",
+    "    df0 = pd.DataFrame(data_hc.stack()[0], columns= ['Australian Capital Territory']).drop('Province/State')\n",
+    "    df1 = pd.DataFrame(data_hc.stack()[1], columns= ['NSW']).drop('Province/State')\n",
+    "    df2 = pd.DataFrame(data_hc.stack()[2], columns= ['Northern Territory']).drop('Province/State')\n",
+    "    df3 = pd.DataFrame(data_hc.stack()[3], columns= ['Queensland']).drop('Province/State')\n",
+    "    df4 = pd.DataFrame(data_hc.stack()[4], columns= ['South Australia']).drop('Province/State')\n",
+    "    df5 = pd.DataFrame(data_hc.stack()[5], columns= ['Tasmania']).drop('Province/State')\n",
+    "    df6 = pd.DataFrame(data_hc.stack()[6], columns= ['Victoria']).drop('Province/State')\n",
+    "    df7 = pd.DataFrame(data_hc.stack()[7], columns= ['Western Australia']).drop('Province/State')\n",
+    "    df_confirmed = pd.concat([df0, df1, df2, df3, df4, df5, df6, df7], axis =1)\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    for i in range(len(df_confirmed)):\n",
+    "        list1.append(df_confirmed.index[i])\n",
+    "        list2.append(df_confirmed.iloc[i].sum())\n",
+    "    df_confirmed = pd.DataFrame({'Date':list1, 'Total':list2})\n",
+    "\n",
+    "\n",
+    "    # Time series data of Australia Deaths\n",
+    "    data_hd = p_hd[p_hd['Country/Region'] == 'Australia']\n",
+    "    data_hd = data_hd.reset_index(drop=True)\n",
+    "    data_hd  = data_hd.drop(columns = ['Country/Region', 'Lat', 'Long'])\n",
+    "    df0 = pd.DataFrame(data_hd.stack()[0], columns= ['Australian Capital Territory']).drop('Province/State')\n",
+    "    df1 = pd.DataFrame(data_hd.stack()[1], columns= ['NSW']).drop('Province/State')\n",
+    "    df2 = pd.DataFrame(data_hd.stack()[2], columns= ['Northern Territory']).drop('Province/State')\n",
+    "    df3 = pd.DataFrame(data_hd.stack()[3], columns= ['Queensland']).drop('Province/State')\n",
+    "    df4 = pd.DataFrame(data_hd.stack()[4], columns= ['South Australia']).drop('Province/State')\n",
+    "    df5 = pd.DataFrame(data_hd.stack()[5], columns= ['Tasmania']).drop('Province/State')\n",
+    "    df6 = pd.DataFrame(data_hd.stack()[6], columns= ['Victoria']).drop('Province/State')\n",
+    "    df7 = pd.DataFrame(data_hd.stack()[7], columns= ['Western Australia']).drop('Province/State')\n",
+    "    df_death = pd.concat([df0, df1, df2, df3, df4, df5, df6, df7], axis =1)\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    for i in range(len(df_death)):\n",
+    "        list1.append(df_death.index[i])\n",
+    "        list2.append(df_death.iloc[i].sum())\n",
+    "    df_death = pd.DataFrame({'Date':list1, 'Total':list2})\n",
+    "\n",
+    "    # Times series data of Australia recovered cases\n",
+    "    data_hr = p_hr[p_hr['Country/Region'] == 'Australia']\n",
+    "    data_hr = data_hr.reset_index(drop=True)\n",
+    "    data_hr  = data_hr.drop(columns = ['Country/Region', 'Lat', 'Long'])\n",
+    "    df0 = pd.DataFrame(data_hr.stack()[0], columns= ['Australian Capital Territory']).drop('Province/State')\n",
+    "    df1 = pd.DataFrame(data_hr.stack()[1], columns= ['NSW']).drop('Province/State')\n",
+    "    df2 = pd.DataFrame(data_hr.stack()[2], columns= ['Northern Territory']).drop('Province/State')\n",
+    "    df3 = pd.DataFrame(data_hr.stack()[3], columns= ['Queensland']).drop('Province/State')\n",
+    "    df4 = pd.DataFrame(data_hr.stack()[4], columns= ['South Australia']).drop('Province/State')\n",
+    "    df5 = pd.DataFrame(data_hr.stack()[5], columns= ['Tasmania']).drop('Province/State')\n",
+    "    df6 = pd.DataFrame(data_hr.stack()[6], columns= ['Victoria']).drop('Province/State')\n",
+    "    df7 = pd.DataFrame(data_hr.stack()[7], columns= ['Western Australia']).drop('Province/State')\n",
+    "    df_recovered = pd.concat([df0, df1, df2, df3, df4, df5, df6, df7], axis =1)\n",
+    "    list1 = []\n",
+    "    list2 = []\n",
+    "    for i in range(len(df_recovered)):\n",
+    "        list1.append(df_recovered.index[i])\n",
+    "        list2.append(df_recovered.iloc[i].sum())\n",
+    "    df_recovered = pd.DataFrame({'Date':list1, 'Total':list2})\n",
+    "\n",
+    "    return data_td, df_confirmed, df_death, df_recovered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_latest, df_confirmed, df_death, df_recovered = scraping_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Death Rate</th>\n",
+       "      <th>Confirmed/100k</th>\n",
+       "      <th>Last_Update</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australian Capital Territory</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107</td>\n",
+       "      <td>103</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.028037</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-35.4735</td>\n",
+       "      <td>149.0124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>New South Wales</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>643</td>\n",
+       "      <td>3035</td>\n",
+       "      <td>2349</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.014168</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-33.8688</td>\n",
+       "      <td>151.2093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Northern Territory</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-12.4634</td>\n",
+       "      <td>130.8456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Queensland</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1043</td>\n",
+       "      <td>980</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.005753</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-27.4698</td>\n",
+       "      <td>153.0251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>South Australia</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>7</td>\n",
+       "      <td>438</td>\n",
+       "      <td>427</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.009132</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-34.9285</td>\n",
+       "      <td>138.6007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Tasmania</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>43</td>\n",
+       "      <td>221</td>\n",
+       "      <td>165</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.058824</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-42.8821</td>\n",
+       "      <td>147.3272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>94</td>\n",
+       "      <td>1423</td>\n",
+       "      <td>1311</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.012649</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-37.8136</td>\n",
+       "      <td>144.9631</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Western Australia</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>14</td>\n",
+       "      <td>551</td>\n",
+       "      <td>528</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.016334</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>2020-05-05 02:32:34</td>\n",
+       "      <td>-31.9505</td>\n",
+       "      <td>115.8605</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Province_State Country_Region  Active  Confirmed  Recovered  \\\n",
+       "0  Australian Capital Territory      Australia       1        107        103   \n",
+       "1               New South Wales      Australia     643       3035       2349   \n",
+       "2            Northern Territory      Australia       5         29         24   \n",
+       "3                    Queensland      Australia      57       1043        980   \n",
+       "4               South Australia      Australia       7        438        427   \n",
+       "5                      Tasmania      Australia      43        221        165   \n",
+       "6                      Victoria      Australia      94       1423       1311   \n",
+       "7             Western Australia      Australia      14        551        528   \n",
+       "\n",
+       "   Deaths  Death Rate  Confirmed/100k         Last_Update      Lat     Long_  \n",
+       "0       3    0.028037            26.0 2020-05-05 02:32:34 -35.4735  149.0124  \n",
+       "1      43    0.014168            40.0 2020-05-05 02:32:34 -33.8688  151.2093  \n",
+       "2       0    0.000000            14.0 2020-05-05 02:32:34 -12.4634  130.8456  \n",
+       "3       6    0.005753            21.0 2020-05-05 02:32:34 -27.4698  153.0251  \n",
+       "4       4    0.009132            26.0 2020-05-05 02:32:34 -34.9285  138.6007  \n",
+       "5      13    0.058824            43.0 2020-05-05 02:32:34 -42.8821  147.3272  \n",
+       "6      18    0.012649            22.0 2020-05-05 02:32:34 -37.8136  144.9631  \n",
+       "7       9    0.016334            21.0 2020-05-05 02:32:34 -31.9505  115.8605  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_latest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pie = df_latest[['Province_State', 'Active']]\n",
+    "df_pie = df_pie.set_index('Province_State')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Active</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Province_State</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Australian Capital Territory</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New South Wales</th>\n",
+       "      <td>643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Northern Territory</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Queensland</th>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South Australia</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tasmania</th>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Victoria</th>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Western Australia</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Active\n",
+       "Province_State                      \n",
+       "Australian Capital Territory       1\n",
+       "New South Wales                  643\n",
+       "Northern Territory                 5\n",
+       "Queensland                        57\n",
+       "South Australia                    7\n",
+       "Tasmania                          43\n",
+       "Victoria                          94\n",
+       "Western Australia                 14"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pie"
    ]
   }
  ],
